@@ -1,3 +1,8 @@
+Thu Oct 26 14:26:27 EDT 2006	JK Lowden <jklowden@freetds.org>
+	* src/dblib/unittests/common.c src/dblib/unittests/common.h
+	* src/dblib/unittests/t0001.c
+	- corrected command-line option handling
+
 Sat Oct 21 16:42:08 EDT 2006	JK Lowden <jklowden@schemamania.org>
 	* src/dblib/dblib.c src/dblib/unittests/t0022.c
 	- dbresults succeeds if metadata or only return status is
